Generate CI values files from fragments

--- a/charts/matrix-stack/ci/element-web-checkov-values.yaml
+++ b/charts/matrix-stack/ci/element-web-checkov-values.yaml
@@ -1,34 +1,22 @@
-# Copyright 2024 New Vector Ltd
+# Copyright 2024-2025 New Vector Ltd
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
-
-serverName: ess.localhost
+#
+# source_fragments: element-web-minimal.yaml element-web-checkov.yaml
+# DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 initSecrets:
   enabled: false
-
 elementWeb:
-  additional: {
-    "default_server_config": {
-      "m.homeserver": {
-        "base_url": "https://element.ess.localhost",
-      }
-    },
-  }
-
   ingress:
     host: element.ess.localhost
-
   annotations:
     checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
     checkov.io/skip2: CKV_K8S_43=No digests
     checkov.io/skip3: CKV2_K8S_6=No network policy yet
-
 matrixAuthenticationService:
   enabled: false
-
 synapse:
   enabled: false
-
 wellKnownDelegation:
   enabled: false
