--- a/charts/matrix-stack/ci/element-web-minimal-values.yaml
+++ b/charts/matrix-stack/ci/element-web-minimal-values.yaml
@@ -1,19 +1,18 @@
-# Copyright 2024 New Vector Ltd
+# Copyright 2024-2025 New Vector Ltd
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
+#
+# source_fragments: element-web-minimal.yaml
+# DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 initSecrets:
   enabled: false
-
 elementWeb:
   ingress:
     host: element.ess.localhost
-
 matrixAuthenticationService:
   enabled: false
-
 synapse:
   enabled: false
-
 wellKnownDelegation:
   enabled: false
