--- a/charts/matrix-stack/ci/fragments/synapse-all-workers-running.yaml
+++ b/charts/matrix-stack/ci/fragments/synapse-all-workers-running.yaml
@@ -1,28 +1,8 @@
-# Copyright 2024-2025 New Vector Ltd
+# Copyright 2025 New Vector Ltd
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
-#
-# source_fragments: synapse-minimal.yaml synapse-test-postgres.yaml synapse-all-workers-running.yaml init-secrets-minimal.yaml
-# DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
-initSecrets:
-  enabled: true
-elementWeb:
-  enabled: false
-matrixAuthenticationService:
-  enabled: false
 synapse:
-  ingress:
-    host: synapse.ess.localhost
-  registrationSharedSecret:
-    value: CHANGEME-ooWo6jeidahhei3Hae0eer9U
-  postgres:
-    host: ess-postgres
-    user: synapse_user
-    database: synapse
-    password:
-      secret: ess-postgres
-      secretKey: password
   workers:
     appservice:
       enabled: true
@@ -62,6 +42,3 @@ synapse:
       enabled: true
     user-dir:
       enabled: true
-wellKnownDelegation:
-  enabled: false
-serverName: ess.localhost
