--- a/charts/matrix-stack/ci/synapse-ingress-additional-paths-values.yaml
+++ b/charts/matrix-stack/ci/synapse-ingress-additional-paths-values.yaml
@@ -1,47 +1,36 @@
-# Copyright 2024 New Vector Ltd
+# Copyright 2024-2025 New Vector Ltd
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
-
-serverName: ess.localhost
+#
+# source_fragments: synapse-minimal.yaml synapse-test-postgres.yaml synapse-ingress-additional-paths.yaml init-secrets-minimal.yaml
+# DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 initSecrets:
-  enabled: false
-
+  enabled: true
 elementWeb:
   enabled: false
-
 matrixAuthenticationService:
   enabled: false
-
 synapse:
   ingress:
     host: synapse.ess.localhost
-
     additionalPaths:
-    - path: /_matrix/identity
-      availability: only_externally
-      service:
-        name: sydent
-        port:
-          number: 8080
-
-    - path: /_synapse
-      availability: blocked
-
-    - path: /other
-      availability: internally_and_externally
-      service:
-        name: something
-        port:
-          name: http
-
+      - path: /_matrix/identity
+        availability: only_externally
+        service:
+          name: sydent
+          port:
+            number: 8080
+      - path: /_synapse
+        availability: blocked
+      - path: /other
+        availability: internally_and_externally
+        service:
+          name: something
+          port:
+            name: http
   registrationSharedSecret:
     value: CHANGEME-ooWo6jeidahhei3Hae0eer9U
-  macaroon:
-    value: CHANGEME-eek3Eigoh8ux8laeTingeej1
-  signingKey:
-    value: ed25519 0 bNQOzBUDszff7Ax81z6w0uZ1IPWoxYaazT7emaZEfpw
-
   postgres:
     host: ess-postgres
     user: synapse_user
@@ -49,3 +38,6 @@ synapse:
     password:
       secret: ess-postgres
       secretKey: password
+wellKnownDelegation:
+  enabled: false
+serverName: ess.localhost
