--- a/charts/matrix-stack/ci/well-known-mas-values.yaml
+++ b/charts/matrix-stack/ci/well-known-mas-values.yaml
@@ -1,51 +1,26 @@
-# Copyright 2024 New Vector Ltd
+# Copyright 2024-2025 New Vector Ltd
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
-
-serverName: ess.localhost
+#
+# source_fragments: well-known-minimal.yaml matrix-authentication-service-minimal.yaml matrix-authentication-service-test-postgres.yaml init-secrets-minimal.yaml
+# DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 initSecrets:
-  enabled: false
-
+  enabled: true
 elementWeb:
   enabled: false
-
 matrixAuthenticationService:
-  enabled: true
   ingress:
     host: mas.ess.localhost
-
   postgres:
     host: postgres
     user: mas
     database: mas
     password:
-      value: CHANGEME-teel5aghaenohhohghiavee5Koh8ahwo
-
-  encryptionSecret:
-    value: CHANGEME-ahohhohgiavee5Koh8ahwo
-
-  synapseSharedSecret:
-    value: CHANGEME-ooWo6jeidahhei3Hae0eer9U
-
-  privateKeys:
-    rsa:
-      value: |
-        -----BEGIN RSA PRIVATE KEY-----
-        MIIEowIBAAKCAQEA6521bYjZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49AwEHoUQDQgAE6521bYjZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49
-        ------END RSA PRIVATE KEY-----
-    ecdsaPrime256v1:
-      value: |
-        -----BEGIN EC PRIVATE KEY-----
-        MHcCAQEEIYjZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49
-        AwEHoUQDQgAE6521bYjZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49
-        AwEAAKBcZW5jb2duZXQwgggYMIINL6Ado018734nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49AwEH
-        ------END EC PRIVATE KEY-----
-
+      secret: ess-postgres
+      secretKey: password
 synapse:
   enabled: false
-  ingress:
-    host: synapse.ess.localhost
-
 wellKnownDelegation:
   enabled: true
+serverName: ess.localhost
