--- a/charts/matrix-stack/ci/well-known-minimal-values.yaml
+++ b/charts/matrix-stack/ci/well-known-minimal-values.yaml
@@ -1,20 +1,18 @@
-# Copyright 2024 New Vector Ltd
+# Copyright 2024-2025 New Vector Ltd
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
-
-serverName: ess.localhost
+#
+# source_fragments: well-known-minimal.yaml
+# DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 initSecrets:
   enabled: false
-
 elementWeb:
   enabled: false
-
 matrixAuthenticationService:
   enabled: false
-
 synapse:
   enabled: false
-
 wellKnownDelegation:
   enabled: true
+serverName: ess.localhost
