--- a/charts/matrix-stack/ci/well-known-synapse-values.yaml
+++ b/charts/matrix-stack/ci/well-known-synapse-values.yaml
@@ -1,30 +1,21 @@
-# Copyright 2024 New Vector Ltd
+# Copyright 2024-2025 New Vector Ltd
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
-
-serverName: ess.localhost
+#
+# source_fragments: well-known-minimal.yaml synapse-minimal.yaml synapse-test-postgres.yaml init-secrets-minimal.yaml
+# DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 initSecrets:
-  enabled: false
-
+  enabled: true
 elementWeb:
   enabled: false
-
 matrixAuthenticationService:
   enabled: false
-
 synapse:
-  enabled: true
   ingress:
     host: synapse.ess.localhost
-
   registrationSharedSecret:
     value: CHANGEME-ooWo6jeidahhei3Hae0eer9U
-  macaroon:
-    value: CHANGEME-eek3Eigoh8ux8laeTingeej1
-  signingKey:
-    value: ed25519 0 bNQOzBUDszff7Ax81z6w0uZ1IPWoxYaazT7emaZEfpw
-
   postgres:
     host: ess-postgres
     user: synapse_user
@@ -32,6 +23,6 @@ synapse:
     password:
       secret: ess-postgres
       secretKey: password
-
 wellKnownDelegation:
   enabled: true
+serverName: ess.localhost
