--- a/charts/matrix-stack/ci/matrix-authentication-service-external-synapse-values.yaml
+++ b/charts/matrix-stack/ci/matrix-authentication-service-external-synapse-values.yaml
@@ -1,28 +1,24 @@
-# Copyright 2025 New Vector Ltd
+# Copyright 2024-2025 New Vector Ltd
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
-
-## Values file containing minimal values for components that are enabled by default only
-
-elementWeb:
-  enabled: false
+#
+# source_fragments: matrix-authentication-service-minimal.yaml matrix-authentication-service-test-postgres.yaml matrix-authentication-service-external-synapse.yaml init-secrets-minimal.yaml
+# DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 initSecrets:
-  enabled: false
-
-matrixAuthenticationService:
   enabled: true
-
+elementWeb:
+  enabled: false
+matrixAuthenticationService:
   ingress:
     host: mas.ess.localhost
-
   postgres:
     host: postgres
     user: mas
     database: mas
     password:
-      value: CHANGEME-teel5aghaenohhohghiavee5Koh8ahwo
-
+      secret: ess-postgres
+      secretKey: password
   additional:
     0000-matrix-server:
       config: |
@@ -34,27 +30,7 @@ matrixAuthenticationService:
           homeserver: "external.localhost
           secret: jaix6Am9Shut7zeiduu7ua5maengag3o
           endpoint: https://syn.external.localhost
-
-  encryptionSecret:
-    value: CHANGEME-ahohhohgiavee5Koh8ahwo
-
-  privateKeys:
-    rsa:
-      value: |
-        -----BEGIN RSA PRIVATE KEY-----
-        MIIEowIBAAKCAQEA6521bYjZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49AwEHoUQDQgAE6521bYjZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49
-        ------END RSA PRIVATE KEY-----
-    ecdsaPrime256v1:
-      value: |
-        -----BEGIN EC PRIVATE KEY-----
-        MHcCAQEEIYjZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49
-        AwEHoUQDQgAE6521bYjZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49
-        AwEAAKBcZW5jb2duZXQwgggYMIINL6Ado018734nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49AwEH
-        ------END EC PRIVATE KEY-----
-
-
 synapse:
   enabled: false
-
 wellKnownDelegation:
   enabled: false
