--- a/charts/matrix-stack/templates/synapse/synapse_secret.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_secret.yaml
@@ -30,7 +30,7 @@ data:
 {{- with .postgres.password.value }}
   POSTGRES_PASSWORD: {{ . | b64enc }}
 {{- end }}
-{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "synapse.registrationSharedSecret" "secretProperty" .registrationSharedSecret)) -}}
+{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "synapse.registrationSharedSecret" "secretProperty" .registrationSharedSecret "initIfAbsent" true)) -}}
 {{- with .registrationSharedSecret.value }}
   REGISTRATION_SHARED_SECRET: {{ . | b64enc }}
 {{- end }}
