Correct the matrix-tools licenses label

--- a/matrix-tools/Dockerfile
+++ b/matrix-tools/Dockerfile
@@ -14,6 +14,7 @@ FROM gcr.io/distroless/static-debian12
 # Label this image with the repo and commit that built it, for freshmaking purposes.
 ARG GIT_COMMIT=devel
 LABEL git_commit=$GIT_COMMIT
+LABEL org.opencontainers.image.licenses="AGPL-3.0-only OR LicenseRef-Element-Commercial"
 WORKDIR /
 
 COPY --from=buildstage  /app/matrix-tools /
