values: update values file to remove postgres when unnecessary

--- a/charts/matrix-stack/ci/element-web-checkov-values.yaml
+++ b/charts/matrix-stack/ci/element-web-checkov-values.yaml
@@ -16,6 +16,8 @@ elementWeb:
     checkov.io/skip3: CKV2_K8S_6=No network policy yet
 matrixAuthenticationService:
   enabled: false
+postgresql:
+  enabled: false
 synapse:
   enabled: false
 wellKnownDelegation:
