--- a/charts/matrix-stack/ci/matrix-authentication-service-external-synapse-values.yaml
+++ b/charts/matrix-stack/ci/matrix-authentication-service-external-synapse-values.yaml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 #
-# source_fragments: matrix-authentication-service-minimal.yaml matrix-authentication-service-test-postgres.yaml matrix-authentication-service-external-synapse.yaml init-secrets-minimal.yaml
+# source_fragments: matrix-authentication-service-minimal.yaml matrix-authentication-service-external-synapse.yaml init-secrets-minimal.yaml postgresql-minimal.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 initSecrets:
@@ -12,13 +12,6 @@ elementWeb:
 matrixAuthenticationService:
   ingress:
     host: mas.ess.localhost
-  postgres:
-    host: postgres
-    user: mas
-    database: mas
-    password:
-      secret: ess-postgres
-      secretKey: password
   additional:
     0000-matrix-server:
       config: |
@@ -30,6 +23,8 @@ matrixAuthenticationService:
           homeserver: "external.localhost
           secret: jaix6Am9Shut7zeiduu7ua5maengag3o
           endpoint: https://syn.external.localhost
+postgresql:
+  enabled: true
 synapse:
   enabled: false
 wellKnownDelegation:
