--- a/charts/matrix-stack/ci/matrix-authentication-service-minimal-values.yaml
+++ b/charts/matrix-stack/ci/matrix-authentication-service-minimal-values.yaml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 #
-# source_fragments: matrix-authentication-service-minimal.yaml matrix-authentication-service-test-postgres.yaml init-secrets-minimal.yaml
+# source_fragments: matrix-authentication-service-minimal.yaml init-secrets-minimal.yaml postgresql-minimal.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 initSecrets:
@@ -12,13 +12,8 @@ elementWeb:
 matrixAuthenticationService:
   ingress:
     host: mas.ess.localhost
-  postgres:
-    host: postgres
-    user: mas
-    database: mas
-    password:
-      secret: ess-postgres
-      secretKey: password
+postgresql:
+  enabled: true
 synapse:
   enabled: false
 wellKnownDelegation:
