--- a/charts/matrix-stack/ci/pytest-matrix-authentication-service-values.yaml
+++ b/charts/matrix-stack/ci/pytest-matrix-authentication-service-values.yaml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 #
-# source_fragments: synapse-minimal.yaml synapse-pytest-extras.yaml matrix-authentication-service-minimal.yaml matrix-authentication-service-pytest-extras.yaml init-secrets-minimal.yaml init-secrets-pytest-extras.yaml
+# source_fragments: synapse-minimal.yaml synapse-pytest-extras.yaml matrix-authentication-service-minimal.yaml matrix-authentication-service-pytest-extras.yaml init-secrets-minimal.yaml init-secrets-pytest-extras.yaml postgresql-minimal.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 initSecrets:
@@ -22,13 +22,8 @@ matrixAuthenticationService:
     000-pytest-admin:
       configSecret: "{{ $.Release.Name }}-pytest-admin"
       configSecretKey: "admin.yaml"
-  postgres:
-    host: "{{ $.Release.Name }}-mas-postgresql"
-    user: mas_user
-    database: mas_db
-    password:
-      secret: "{{ $.Release.Name }}-mas-postgres-db"
-      secretKey: password
+postgresql:
+  enabled: true
 synapse:
   ingress:
     host: synapse.{{ $.Values.serverName }}
@@ -44,13 +39,6 @@ synapse:
   extraEnv:
     - name: DEBUG_RENDERING
       value: "1"
-  postgres:
-    host: "{{ $.Release.Name }}-synapse-postgresql"
-    user: synapse_user
-    database: synapse_db
-    password:
-      secret: "{{ $.Release.Name }}-synapse-postgres-db"
-      secretKey: password
   redis:
     annotations:
       has-no-service-monitor: "true"
