--- a/charts/matrix-stack/ci/synapse-worker-example-values.yaml
+++ b/charts/matrix-stack/ci/synapse-worker-example-values.yaml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 #
-# source_fragments: synapse-minimal.yaml synapse-test-postgres.yaml synapse-all-workers-running.yaml init-secrets-minimal.yaml
+# source_fragments: synapse-minimal.yaml synapse-all-workers-running.yaml init-secrets-minimal.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 initSecrets:
@@ -11,16 +11,11 @@ elementWeb:
   enabled: false
 matrixAuthenticationService:
   enabled: false
+postgresql:
+  enabled: false
 synapse:
   ingress:
     host: synapse.ess.localhost
-  postgres:
-    host: ess-postgres
-    user: synapse_user
-    database: synapse
-    password:
-      secret: ess-postgres
-      secretKey: password
   workers:
     appservice:
       enabled: true
