--- a/charts/matrix-stack/ci/element-web-minimal-values.yaml
+++ b/charts/matrix-stack/ci/element-web-minimal-values.yaml
@@ -12,6 +12,8 @@ elementWeb:
     host: element.ess.localhost
 matrixAuthenticationService:
   enabled: false
+postgresql:
+  enabled: false
 synapse:
   enabled: false
 wellKnownDelegation:
