--- a/charts/matrix-stack/ci/synapse-ingress-additional-paths-values.yaml
+++ b/charts/matrix-stack/ci/synapse-ingress-additional-paths-values.yaml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 #
-# source_fragments: synapse-minimal.yaml synapse-test-postgres.yaml synapse-ingress-additional-paths.yaml init-secrets-minimal.yaml
+# source_fragments: synapse-minimal.yaml synapse-ingress-additional-paths.yaml init-secrets-minimal.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 initSecrets:
@@ -10,6 +10,8 @@ initSecrets:
 elementWeb:
   enabled: false
 matrixAuthenticationService:
+  enabled: false
+postgresql:
   enabled: false
 synapse:
   ingress:
@@ -29,13 +31,6 @@ synapse:
           name: something
           port:
             name: http
-  postgres:
-    host: ess-postgres
-    user: synapse_user
-    database: synapse
-    password:
-      secret: ess-postgres
-      secretKey: password
 wellKnownDelegation:
   enabled: false
 serverName: ess.localhost
