--- a/charts/matrix-stack/ci/synapse-secrets-in-helm-values.yaml
+++ b/charts/matrix-stack/ci/synapse-secrets-in-helm-values.yaml
@@ -11,6 +11,8 @@ elementWeb:
   enabled: false
 matrixAuthenticationService:
   enabled: false
+postgresql:
+  enabled: false
 synapse:
   ingress:
     host: synapse.ess.localhost
